force-app/main/default/objects/Project_Handover__c/Project_Handover__c.object-meta.xml
<CustomObject>
    <description>Handover of projects to other departments</description>
    <label>Project Handover</label>
    <nameField>
        <displayFormat>PH-{0000}</displayFormat>
        <label>Project Handover ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Handovers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>