force-app/main/default/objects/Project_Handover__c/fields/Accepted_By_Support_Date__c.field-meta.xml
<CustomField>
    <fullName>Accepted_By_Support_Date__c</fullName>
    <description>The date this was marked as accepted by support to ensure surveys go out on the right date, populated by automation</description>
    <label>Accepted By Support Date</label>
    <type>Date</type>
</CustomField>