force-app/main/default/objects/Project_Handover__c/fields/CSM_Owner__c.field-meta.xml
<CustomField>
    <fullName>CSM_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSM Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Handovers2</relationshipName>
    <type>Lookup</type>
</CustomField>