force-app/main/default/objects/Project_Handover__c/fields/Customer_Success_Manager__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_Manager__c</fullName>
    <description>Customer Success Manager from the account record at time of creation</description>
    <label>Customer Success Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>