force-app/main/default/objects/Project_Handover__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <formula>IF(( Project_Name__r.RecordType.Name  = &apos;Projects&apos;),TEXT(Project_Name__r.Divison__c) ,  TEXT(Project_Name__r.Division__c)  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Division</label>
    <type>Text</type>
</CustomField>