force-app/main/default/objects/Project_Handover__c/fields/Flightpath_Type__c.field-meta.xml
<CustomField>
    <fullName>Flightpath_Type__c</fullName>
    <description>Flightpath_Type__c type from the Taskray Project</description>
    <formula>IF( Project_Name__r.RecordType.Name = &apos;Projects&apos;,TEXT(Project_Name__r.FlightPath_Type__c), &apos;POAP&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flightpath Type</label>
    <type>Text</type>
</CustomField>