force-app/main/default/objects/Project_Handover__c/fields/Handover_Signed_Off__c.field-meta.xml
<CustomField>
    <fullName>Handover_Signed_Off__c</fullName>
    <label>Handover Signed Off</label>
    <type>Date</type>
</CustomField>