force-app/main/default/objects/Project_Handover__c/fields/Handover_Status__c.field-meta.xml
<CustomField>
    <fullName>Handover_Status__c</fullName>
    <label>Handover Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>Under Support Review</fullName>
            </value>
            <value>
                <fullName>Awaiting PS Feedback</fullName>
            </value>
            <value>
                <fullName>Accepted By Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>