force-app/main/default/objects/Project_Handover__c/fields/Highest_Success_Plan__c.field-meta.xml
<CustomField>
    <fullName>Highest_Success_Plan__c</fullName>
    <description>Highest Success Plan stored at time of creation via a WFR</description>
    <label>Highest Success Plan</label>
    <length>75</length>
    <type>Text</type>
</CustomField>