force-app/main/default/objects/Project_Handover__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Mapped to the Product__c field on the Taskray Project</description>
    <formula>IF( Project_Name__r.RecordType.Name = &apos;Projects&apos;,TEXT(Project_Name__r.Product__c), &apos;Multi-Product&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product</label>
    <type>Text</type>
</CustomField>