force-app/main/default/objects/Project_Handover__c/fields/Project_Contact__c.field-meta.xml
<CustomField>
    <fullName>Project_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact for the taskray project</description>
    <label>Project Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Handovers</relationshipLabel>
    <relationshipName>Project_Handovers</relationshipName>
    <type>Lookup</type>
</CustomField>