force-app/main/default/objects/Project_Handover__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Name</label>
    <referenceTo>TASKRAY__Project__c</referenceTo>
    <relationshipLabel>Project Handovers</relationshipLabel>
    <relationshipName>Project_Handovers</relationshipName>
    <type>Lookup</type>
</CustomField>