force-app/main/default/objects/Project_Handover__c/fields/Project_Onboarding_Complete__c.field-meta.xml
<CustomField>
    <fullName>Project_Onboarding_Complete__c</fullName>
    <label>Workspace Onboarding Complete</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>