force-app/main/default/objects/Project_Handover__c/fields/PS_Owner__c.field-meta.xml
<CustomField>
    <fullName>PS_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PS Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Handovers</relationshipName>
    <type>Lookup</type>
</CustomField>