force-app/main/default/objects/Project_Handover__c/fields/Support_Owner__c.field-meta.xml
<CustomField>
    <fullName>Support_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Handovers1</relationshipName>
    <type>Lookup</type>
</CustomField>