force-app/main/default/objects/Project_Handover__c/fields/Survey_Type__c.field-meta.xml
<CustomField>
    <fullName>Survey_Type__c</fullName>
    <formula>if(
AND(
TEXT(Handover_Status__c) = &apos;Accepted By Support&apos;,
 Accepted_By_Support_Date__c + 30 &lt;= TODAY(),
 X30_Days_Survey_Sent__c = false,
OR( Flightpath_Type__c = &apos;A&apos;, Flightpath_Type__c = &apos;B&apos;,Flightpath_Type__c = &apos;C&apos;)
),&apos;FlightPath_30_Days&apos;,
if(
AND(
TEXT(Handover_Status__c) = &apos;Accepted By Support&apos;,
 Accepted_By_Support_Date__c + 90 &lt;= TODAY(),
 X30_Days_Survey_Sent__c = True,
 X60_Days_Survey_Sent__c = false,
OR( Flightpath_Type__c = &apos;A&apos;, Flightpath_Type__c = &apos;B&apos;,Flightpath_Type__c = &apos;C&apos;)
),&apos;FlightPath_90_Days&apos;,&apos;&apos;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Type</label>
    <type>Text</type>
</CustomField>