force-app/main/default/objects/Project_Handover__c/fields/Taskray_Project_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Taskray_Project_End_Date__c</fullName>
    <description>Estimated End Date formula Field mapped via the assoc. project for JIRA SFCS-700</description>
    <formula>Project_Name__r.TASKRAY__Project_End__c</formula>
    <label>Taskray Project End Date</label>
    <type>Date</type>
</CustomField>