force-app/main/default/objects/Project_Handover__c/fields/X30_Days_Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>X30_Days_Survey_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tracks that the 30 day survey has been sent</description>
    <label>30 Days Survey Sent</label>
    <type>Checkbox</type>
</CustomField>