force-app/main/default/objects/Project_Handover__c/fields/X60_Days_Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>X60_Days_Survey_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks the the 60 day survey has been sent</description>
    <label>90 Days Survey Sent</label>
    <type>Checkbox</type>
</CustomField>