force-app/main/default/objects/Project_Handover__c/validationRules/Status_Field_cannot_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Field_cannot_be_blank</fullName>
    <active>true</active>
    <description>If the Handover Status is &apos;Awaiting PS Feedback&apos; the Reason Field cannot be empty.</description>
    <errorConditionFormula>AND(ISPICKVAL(Handover_Status__c , &apos;Awaiting PS Feedback&apos;), ISBLANK(Reason__c))</errorConditionFormula>
    <errorMessage>Reason field must be populated when the Handover Status is &apos;Awaiting PS Feedback&apos;</errorMessage>
</ValidationRule>