force-app/main/default/objects/Project_Handover__c/validationRules/Support_Owner_Must_Be_Populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Support_Owner_Must_Be_Populated</fullName>
    <active>true</active>
    <description>Support Owner has to be populated before changing the status to Awaiting PS Feedback and Accepted by Support</description>
    <errorConditionFormula>AND(ISCHANGED(Handover_Status__c),
     ISBLANK(Support_Owner__c), 
  OR( ISPICKVAL(Handover_Status__c, &apos;Awaiting PS Feedback&apos;),
      ISPICKVAL(Handover_Status__c, &apos;Accepted by Support&apos;)
     )
    )</errorConditionFormula>
    <errorMessage>Support Owner Field must be populated before changing the status.</errorMessage>
</ValidationRule>