force-app/main/default/objects/Project_Handover__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Division__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Product__c</columns>
    <columns>Flightpath_Type__c</columns>
    <columns>Handover_Status__c</columns>
    <columns>Handover_Signed_Off__c</columns>
    <columns>PS_Owner__c</columns>
    <columns>Support_Owner__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>