force-app/main/default/objects/Project_Handover__c/listViews/DLC_Projects_Handovers_Accepted.listView-meta.xml
<ListView>
    <fullName>DLC_Projects_Handovers_Accepted</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Product__c</columns>
    <columns>Flightpath_Type__c</columns>
    <columns>PS_Owner__c</columns>
    <columns>Support_Owner__c</columns>
    <columns>Handover_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Division__c</field>
        <operation>equals</operation>
        <value>DLC</value>
    </filters>
    <filters>
        <field>Handover_Status__c</field>
        <operation>equals</operation>
        <value>Accepted By Support</value>
    </filters>
    <label>#DLC: Projects Handovers - Accepted</label>
</ListView>