force-app/main/default/objects/Project_Handover__c/listViews/EDU_Projects_Handovers_CSM.listView-meta.xml
<ListView>
    <fullName>EDU_Projects_Handovers_CSM</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Product__c</columns>
    <columns>Flightpath_Type__c</columns>
    <columns>PS_Owner__c</columns>
    <columns>Support_Owner__c</columns>
    <columns>Handover_Status__c</columns>
    <columns>CSM_Owner__c</columns>
    <columns>Customer_Success_Manager__c</columns>
    <columns>Highest_Success_Plan__c</columns>
    <columns>Handover_Signed_Off__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Division__c</field>
        <operation>equals</operation>
        <value>Education</value>
    </filters>
    <filters>
        <field>Handover_Status__c</field>
        <operation>equals</operation>
        <value>Accepted By Support</value>
    </filters>
    <label>#EDU: Projects Handovers - CSM</label>
</ListView>