force-app/main/default/objects/Project_Handover__c/listViews/EDU_Projects_Handovers_Submitted.listView-meta.xml
<ListView>
    <fullName>EDU_Projects_Handovers_Submitted</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Product__c</columns>
    <columns>Flightpath_Type__c</columns>
    <columns>PS_Owner__c</columns>
    <columns>Support_Owner__c</columns>
    <columns>Handover_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Division__c</field>
        <operation>equals</operation>
        <value>Education</value>
    </filters>
    <filters>
        <field>Handover_Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>#EDU: Projects Handovers - Created</label>
    <sharedTo>
        <group>All_Internal_Users</group>
    </sharedTo>
</ListView>